--- a/includes/medtec.bib
+++ b/includes/medtec.bib
@@ -368,7 +368,8 @@
   doi = {10.11591/ijece.v10i3.pp2659-2667},
   url = {http://ijece.iaescore.com/index.php/IJECE/article/view/20880},
   urldate = {2024-10-27},
-  abstract = {Advances in smartphone technology have led to the strong emergence of mobile learning (m-learning) on the market to support foreign language learning purposes, especially for the Japanese language. No matter what kind of m-learning application, their goal should help learners to learn the Japanese language independently. However, popular Japanese m-learning applications only accommodate on enhancing reading, vocabulary and writing ability so that user experience issues are still prevalent and may affect the learning outcome. In the context of user experience, usability is one of the essential factors in mobile application development to determine the level of the application’s user experience. In this paper, we advocate for a user experience improvement by using the mental model and A/B testing. The mental model is used to reflect the user’s inner thinking mode. A comparative approach was used to investigate the performance of 20 high-grade students with homogenous backgrounds and coursework. User experience level was measured based on the usability approach on pragmatic quality and hedonic quality like effectiveness (success rate of task completion), efficiency (task completion time) and satisfaction. The results then compared with an existing Japanese m-learning to gather the insight of improvement of our proposed method. Experimental results show that both m-learning versions proved can enhance learner performance in pragmatic attributes. Nevertheless, the study also reveals that an m-learning that employs the conversational mental model in the learning process is more valued by participants in hedonic qualities. Mean that the proposed m-learning which is developed with the mental model consideration and designed using A/B testing is able to provide conversational learning experience intuitively.}
+  abstract = {Advances in smartphone technology have led to the strong emergence of mobile learning (m-learning) on the market to support foreign language learning purposes, especially for the Japanese language. No matter what kind of m-learning application, their goal should help learners to learn the Japanese language independently. However, popular Japanese m-learning applications only accommodate on enhancing reading, vocabulary and writing ability so that user experience issues are still prevalent and may affect the learning outcome. In the context of user experience, usability is one of the essential factors in mobile application development to determine the level of the application’s user experience. In this paper, we advocate for a user experience improvement by using the mental model and A/B testing. The mental model is used to reflect the user’s inner thinking mode. A comparative approach was used to investigate the performance of 20 high-grade students with homogenous backgrounds and coursework. User experience level was measured based on the usability approach on pragmatic quality and hedonic quality like effectiveness (success rate of task completion), efficiency (task completion time) and satisfaction. The results then compared with an existing Japanese m-learning to gather the insight of improvement of our proposed method. Experimental results show that both m-learning versions proved can enhance learner performance in pragmatic attributes. Nevertheless, the study also reveals that an m-learning that employs the conversational mental model in the learning process is more valued by participants in hedonic qualities. Mean that the proposed m-learning which is developed with the mental model consideration and designed using A/B testing is able to provide conversational learning experience intuitively.},
+  file = {/home/ro/Zotero/storage/VE95H6J2/Brata and Brata - 2020 - User experience improvement of japanese language mobile learning application through mental model an.pdf}
 }
 
 @article{burnetDefiningTumourTarget2004,
@@ -454,12 +455,14 @@
   shortjournal = {JBMR Plus},
   volume = {5},
   number = {3},
+  pages = {e10474},
   issn = {2473-4039},
   doi = {10.1002/jbm4.10474},
   url = {https://academic.oup.com/jbmrplus/article/7499109},
   urldate = {2024-10-28},
   abstract = {ABSTRACT                            Micro–computed tomography (μCT) has become essential for analysis of mineralized as well as nonmineralized tissues and is therefore widely applicable in the life sciences. However, lack of standardized approaches and protocols for scanning, analyzing, and reporting data often makes it difficult to understand exactly how analyses were performed, how to interpret results, and if findings can be broadly compared with other models and studies. This problem is compounded in analysis of the dentoalveolar complex by the presence of four distinct mineralized tissues: enamel, dentin, cementum, and alveolar bone. Furthermore, these hard tissues interface with adjacent soft tissues, the dental pulp and periodontal ligament (PDL), making for a complex organ. Drawing on others' and our own experience analyzing rodent dentoalveolar tissues by μCT, we introduce techniques to successfully analyze dentoalveolar tissues with similar or disparate compositions, densities, and morphological characteristics. Our goal is to provide practical guidelines for μCT analysis of rodent dentoalveolar tissues, including approaches to optimize scan parameters (filters, voltage, voxel size, and integration time), reproducibly orient samples, define regions and volumes of interest, segment and subdivide tissues, interpret findings, and report methods and results. We include illustrative examples of analyses performed on genetically engineered mouse models with phenotypes in enamel, dentin, cementum, and alveolar bone. The recommendations are designed to increase transparency and reproducibility, promote best practices, and provide a basic framework to apply μCT analysis to the dentoalveolar complex that can also be extrapolated to a variety of other tissues of the body. © 2021 The Authors.               JBMR Plus               published by Wiley Periodicals LLC. on behalf of American Society for Bone and Mineral Research.},
-  langid = {english}
+  langid = {english},
+  file = {/home/ro/Zotero/storage/DKZ4RKPS/Chavez et al. - 2021 - Guidelines for Micro–Computed Tomography Analysis of Rodent Dentoalveolar Tissues.pdf}
 }
 
 @inproceedings{chenMaskLabInstanceSegmentation2018,
@@ -900,7 +903,7 @@
   location = {Upper Saddle River, NJ},
   isbn = {978-0-13-168728-8},
   langid = {english},
-  pagetotal = {954}
+  file = {/home/ro/Zotero/storage/QBCMRDN9/Gonzalez and Woods - 2007 - Digital image processing.pdf}
 }
 
 @incollection{gradyEnergyMinimizationApproach2006,
@@ -1093,8 +1096,7 @@
   publisher = {Chelsea},
   location = {New York},
   isbn = {978-0-8284-0061-9},
-  langid = {german},
-  pagetotal = {476}
+  langid = {german}
 }
 
 @book{hauxStrategicInformationManagement2003,
@@ -1151,7 +1153,7 @@
   number = {2230},
   publisher = {Humana Press},
   location = {New York, NY},
-  isbn = {978-1-07-161028-2 978-1-07-161027-5},
+  isbn = {978-1-0716-1028-2 978-1-0716-1027-5},
   langid = {english},
   pagetotal = {482}
 }
@@ -1461,7 +1463,7 @@
   doi = {10.1007/978-1-0716-1028-2_11},
   url = {http://link.springer.com/10.1007/978-1-0716-1028-2_11},
   urldate = {2023-09-19},
-  isbn = {978-1-07-161027-5 978-1-07-161028-2},
+  isbn = {978-1-0716-1027-5 978-1-0716-1028-2},
   langid = {english}
 }
 
@@ -2313,7 +2315,7 @@
   url = {https://ieeexplore.ieee.org/document/9277110/},
   urldate = {2023-01-13},
   eventtitle = {2020 {{International Conference}} on {{Smart Technologies}} in {{Computing}}, {{Electrical}} and {{Electronics}} ({{ICSTCEE}})},
-  isbn = {978-1-72817-213-2}
+  isbn = {978-1-7281-7213-2}
 }
 
 @article{rammeAutomatedBoneSegmentation2017,
@@ -2348,7 +2350,6 @@
   journaltitle = {Informatics in Medicine Unlocked},
   shortjournal = {Informatics in Medicine Unlocked},
   volume = {47},
-  pages = {101504},
   issn = {23529148},
   doi = {10.1016/j.imu.2024.101504},
   url = {https://linkinghub.elsevier.com/retrieve/pii/S2352914824000601},
@@ -2587,7 +2588,7 @@
   url = {https://ieeexplore.ieee.org/document/9297970/},
   urldate = {2024-09-12},
   eventtitle = {2020 {{International Conference}} on {{Computer Engineering}}, {{Network}}, and {{Intelligent Multimedia}} ({{CENIM}})},
-  isbn = {978-1-72818-283-4}
+  isbn = {978-1-7281-8283-4}
 }
 
 @artwork{shabalinKmeansClusteringKmeans2024,
