--- a/includes/medtec.bib
+++ b/includes/medtec.bib
@@ -1827,7 +1827,7 @@
   journaltitle = {Annals of Pharmacotherapy},
   shortjournal = {Ann Pharmacother},
   volume = {37},
-  number = {7-8},
+  number = {7--8},
   pages = {1003--1009},
   issn = {1060-0280},
   doi = {10.1345/aph.1C449},
@@ -2954,6 +2954,22 @@
   url = {https://github.com/novoid/LaTeX-KOMA-template},
   urldate = {2023-02-16},
   abstract = {Generic template for midsize and larger documents based on KOMA script classes.}
+}
+
+@inproceedings{wanavitTechnologyTransferConvolutional2022,
+  title = {Technology {{Transfer}} of {{Convolutional Neural Networks}}: {{An Example}}:},
+  shorttitle = {Technology {{Transfer}} of {{Convolutional Neural Networks}}},
+  booktitle = {Proceedings of the 14th {{International Joint Conference}} on {{Computational Intelligence}}},
+  author = {Wanavit, Thanakij and Sallee, Samuel and Puncreobutr, Chedtha and Klieb, Leslie and Tea-Makorn, Pin},
+  date = {2022},
+  pages = {375--380},
+  publisher = {{SCITEPRESS - Science and Technology Publications}},
+  location = {Valletta, Malta},
+  doi = {10.5220/0011540200003332},
+  url = {https://www.scitepress.org/DigitalLibrary/Link.aspx?doi=10.5220/0011540200003332},
+  urldate = {2025-01-04},
+  eventtitle = {14th {{International Conference}} on {{Neural Computation Theory}} and {{Applications}}},
+  isbn = {978-989-758-611-8}
 }
 
 @article{wangImageSegmentationEvaluation2020,
