--- a/includes/thesis/part01-page1-titlepage.tex
+++ b/includes/thesis/part01-page1-titlepage.tex
@@ -28,7 +28,7 @@
 
 		\vfill
 
-		\place, \thesisdate
+		\place, 2nd December 2024 %freeze date for publishing %\thesisdate
 	\end{sffamily}
 
 \end{titlepage}
