--- a/README.org
+++ b/README.org
@@ -29,7 +29,7 @@ Please see the corresponding files.
 | Research Proposal |   18.02.2024 |  12.02.2024 |
 | Experiments       |   01.05.2024 |  01.08.2024 |
 | Thesis            |              |  08.12.2024 |
-| Presentation      |              |             |
+| Presentation      |              |  14.01.2025 |
 
 * How to build
 ** Requirements
